--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ subtitle: accelerating the mechanization
     <article class="post_card post">
       <header class="post_header">
         {% if post.image and post.image != "" %}
-        <img src="{{ post.image | prepend: site.baseurl | replace: '//', '/' }}" />
+        <a href="{{ post.url | prepend: site.baseurl }}">
+          <img alt="{{ post.title}}" src="{{ post.image | prepend: site.baseurl | replace: '//', '/' }}" />
+        </a>
         {% endif %}
         <h1 class="post_title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title}}</a></h1>
         {% if post.subtitle %}<h3>{{ post.subtitle }}</h3>{% endif %}
